lintian-brush (0.135) UNRELEASED; urgency=medium

  * field-name-typo-in-dep5-copyright: Don't overwrite existing fields.
  * Various formatting improvements.
  * Fix compatibility with upcoming versions of Breezy, with slightly
    modified DirtyTracker API.

 -- Jelmer Vernooĳ <jelmer@debian.org>  Tue, 01 Nov 2022 18:10:53 +0000

lintian-brush (0.134) unstable; urgency=medium

  * deb-scrub-obsolete: add --keep-minimum-depends-versions option.

 -- Jelmer Vernooĳ <jelmer@debian.org>  Sun, 30 Oct 2022 18:31:05 +0000

lintian-brush (0.133) unstable; urgency=medium

  * Add fixer for missing-prerequisite-for-pyproject-backend.
  * typo-in-debhelper-override-target: Don't erroneously correct
    mh_install to dh_install. Closes: #1021899
  * old-override-info-format: Update non-standard-file-perm.
  * Support DEB_COMPAT_RELEASE environment variable.
  * threshold calculattion: Update tag names after changes in lintian.
  * Add significantly more regexes for old-override-info-format.
  * debian-rules-uses-as-needed-linker-flag: Drop related comments as
    well when removing entire line.

 -- Jelmer Vernooĳ <jelmer@debian.org>  Sat, 29 Oct 2022 19:28:29 +0100

lintian-brush (0.132) unstable; urgency=medium

  * Add old-override-info-format pattern for uses-dpkg-database-
    directly.
  * old-override-info-format: Don't repeatedly add surrounding []s.

 -- Jelmer Vernooĳ <jelmer@debian.org>  Wed, 28 Sep 2022 18:27:24 +0100

lintian-brush (0.131) unstable; urgency=medium

  [ Jelmer Vernooĳ ]
  * debian-rules-uses-as-needed-linker-flags: don't just reformat linker
    flag lines.
  * detect_gbp_dch: Scan for WIP headers in changelog as well.

  [ Debian Janitor ]
  * Remove constraints unnecessary since buster (oldstable):
    + Build-Depends: Drop versioned constraint on gpg and python3-dulwich.
    + lintian-brush: Drop versioned constraint on python3-dulwich in Depends.
    + lintian-brush: Drop versioned constraint on gpg in Recommends.