@@ -43,3 +43,4 @@ console_scripts =
     apply-multiarch-hints=lintian_brush.multiarch_hints:main
     deb-scrub-obsolete=lintian_brush.scrub_obsolete:main
     deb-vcs-publish=lintian_brush.publish:main
+    deb-upstream-deps=lintian_brush.upstream_deps:main
