@@ -4,6 +4,7 @@ lintian-brush (0.135) UNRELEASED; urgency=medium
   * Various formatting improvements.
   * Fix compatibility with upcoming versions of Breezy, with slightly
     modified DirtyTracker API.
+  * Add deb-upstream-deps binary.
 
  -- Jelmer Vernooĳ <jelmer@debian.org>  Tue, 01 Nov 2022 18:10:53 +0000
 
